@@ -1,5 +1,8 @@
 2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* flower/include/guile-compatibility.hh (SCM_I_CONSP): add
+	SCM_I_CONSP
+
 	* Documentation/user/invoking.itely (Invoking lilypond): add
 	LILYPOND_GC_YIELD documentation.
 
